fixed alignment login page

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -549,7 +549,7 @@ h2.m_1 {
 .col_1_of_login {
     display: block;
     float: left;
-    margin: 1% 0 1% 11.6%;
+    margin: 1% 0 1% 6.6%;
     background: #f7f7f7;
 }
 .span_1_of_login p {
@@ -1035,7 +1035,7 @@ form::after {
 
 /* create item */
 .sell-item-cont {
-    margin-top: 10px;
+    margin-top: 15px;
     width: 76.1%;
 }
 .title-cont-input .price-input {
@@ -2117,8 +2117,8 @@ textarea#sndmsgtxt {
     .border {margin-bottom: 10%;}
     .span_1_of_2 {width: 100%;}
     .col_1_of_2 {float:none;margin:0;}
-    .span_1_of_login width: 100%;}
-    .col_1_of_login {float: none;margin: 1% 0 1% 0%;}
+    .span_1_of_login {width: 100%;}
+    .col_1_of_login {float: left;margin: 1% 0 1% 0%;}
 }
 @media (max-width:640px) {
     .header-bottom-right {width: 100%;float: none;margin-top: 10px;}
